Revision history for {{$dist->name}}

{{$NEXT}}

4.101611  2010-06-10 11:37:52 America/New_York
          added nonsensical $VERSION = $VERSION to appease the PAUSE indexer
          and other garbage code that evals a single line to guess at the
          version's value

4.101610  2010-06-10 10:01:37 America/New_York
          Fix Win32 \r\n emission. \r\n is only emitted now if its there in
          the original code. Tests included to make sure DZil doesn't sufer
          the problem under itself on windows. (Kent Fredric)

          Fix Tar permissions. (Kent Fredric, stolen from Module::Build)

          @Filter can now pass arguments along to the filter if you use a new
          dash-prefix config convention.  Consult its documentation for more
          information.  (Florian Ragwitz)

          PkgVersion now adds the version assignment to the same line as the
          package declaration to avoid altering line numbering.  (David
          Golden)

4.101582  2010-06-07 18:23:04 America/New_York
          improve tests to work with new CPAN::Meta

          fix incorrect type constraint in UploadToCPAN

4.101580  2010-06-07 10:21:51 America/New_York
          make UploadToCPAN look at the right stash by default

4.101570  2010-06-06 23:36:58 America/New_York
          validate distmeta before writing to disk

          changes to Dist-Zilla's distribution metadata to validate

4.101550  2010-06-04 11:16:13 America/New_York
          a number of minor changes to documentation

          a few improvements to use of type constraints in Zilla.pm

          some methods that were undocumented have been _-prefixed

          ModuleBuild now turns on recursive_test_files unconditionally

          the install_command argument to $zilla->install should now be an
          arrayref

          suppressed a stringifying-undef warning when using UploadToCPAN

          no longer try to compose an obsolete Dist::Zilla::Config role
